# habit_tracker

./: .env.sample  README.md  docker-compose.yaml  habits.json  pyproject.toml  requirements.txt  users.json
config/: settings.py  urls.py
habits/: admin.py  models.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py  0002_alter_habit_user.py  0003_alter_habit_options.py
users/: admin.py  models.py  permissions.py  tests.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_alter_user_options_remove_user_username_user_avatar_and_more.py
